fix : fixed some styling errors when a message is too long

--- a/src/styles/sass/chat-section.scss
+++ b/src/styles/sass/chat-section.scss
@@ -70,7 +70,8 @@
 .message {
   position: relative;
   border-radius: 12px;
-  max-width: fit-content;
+  max-width: 50%;
+  width: fit-content;
   margin: vars.$base 0;
   padding: vars.$base * 2;
   display: flex;
